--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "typescript.tsdk": "node_modules\\typescript\\lib"
+"editor.defaultFormatter": "dbaeumer.vscode-eslint",
+"editor.formatOnSave": true,
+"eslint.alwaysShowStatus": true,
+"editor.codeActionsOnSave": {
+"source.fixAll.eslint": true
+}
 }
